# snx-rs

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
apps/nm-snx-auth-dialog/: Cargo.toml
apps/nm-snx-auth-dialog/src/: main.rs  ui.rs
apps/nm-snx-editor/: meson.build
apps/nm-snx-editor/src/: plugin.c
apps/nm-snx-service/: Cargo.toml
apps/nm-snx-service/src/: config.rs  main.rs
crates/snxcore/src/: controller.rs  platform.rs
crates/snxcore/src/model/: params.rs
crates/snxcore/src/platform/linux/: keychain.rs  net.rs  routing.rs
crates/snxcore/src/tunnel/: ssl.rs
crates/snxcore/src/tunnel/ipsec/imp/: native.rs  tun.rs
package/: build-nm-plugin.sh  install-nm-plugin.sh  package-nm-plugin-deb.sh  package-nm-plugin.sh
package/debian/: nm-plugin.control.in  nm-plugin.postinst  nm-plugin.postrm
package/nm/: nm-snx.conf  org.freedesktop.NetworkManager.snx.service  org.freedesktop.NetworkManager.snx.service.debian  snx-rs.service  snx.name  snx.name.debian
package/rpm/: nm-plugin.spec.in
