[package]
name = "nm-snx-auth-dialog"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description = "NetworkManager authentication dialog for snx-rs"
repository.workspace = true
publish.workspace = true

[dependencies]
gtk4 = "0.10"
libadwaita = "0.8"
anyhow = "1"
