[package]
name = "nm-snx-service"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description = "NetworkManager plugin for snx-rs"
repository.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../../crates/snxcore" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
zbus = { version = "5", features = ["tokio"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-appender = "0.2.4"
libc = "0.2.178"
